# ChangeLog for dev-python/turbojson
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/turbojson/ChangeLog,v 1.4 2009/01/08 23:37:59 patrick Exp $

  08 Jan 2009; Patrick Lauer <patrick@gentoo.org> -turbojson-1.0.ebuild,
  -turbojson-1.1.2.ebuild:
  Remove old

*turbojson-1.1.3 (02 Jul 2008)

  02 Jul 2008; Rob Cakebread <pythonhead@gentoo.org>
  +turbojson-1.1.3.ebuild:
  Version bump.

*turbojson-1.1.2 (04 Jan 2008)

  04 Jan 2008; Ali Polatel <hawking@gentoo.org> +turbojson-1.1.2.ebuild:
  Version bump. Changed SRC_URI

  05 Feb 2007; Tiziano Müller <dev-zero@gentoo.org>
  -turbojson-0.9.9.ebuild, +turbojson-1.0.ebuild, +metadata.xml:
  Initial ebuild. Version bump. Changed SRC_URI and dependencies.. Fixed tests
  and added ~amd64 keyword and NEED_PYTHON
