@@ -1,8 +1,6 @@
-DIST TurboJson-1.0.tar.gz 2689 RMD160 5d237f1ab059f9fbe0e74ab0727f42dec14ce962 SHA1 7facd1d3458091874f7a78e7b4a8607cd4980946 SHA256 63df4f1d1e6fa23a92b519d291ca1c9e84eaccbc2b6083a7bf471a2d1dd39ae0
-DIST TurboJson-1.1.2.tar.gz 4225 RMD160 5d18dfd76a8b78f1b2e5512d4293356039211e67 SHA1 62b789ba593ad9f1e4b7a9b89660f252a56db835 SHA256 c51a5c2bb24e347d41bdcb7513fe8cbc830986b202c5a49d642adcd81fcfbddc
 DIST TurboJson-1.1.3.tar.gz 5919 RMD160 363b3f64c0028da9a45bbe0596351282dd320669 SHA1 74ee7bba4b1b9b72cd2187cd8d6180324bfd137b SHA256 3812c8a0787475e038762e6155d6155970efd964e372f0443dd83b1587610afd
-EBUILD turbojson-1.0.ebuild 803 RMD160 fc0e1a212a8949d8df156739ea8a3b187fec7352 SHA1 5b75a613c93696cfa534bfd44403e20283cf1b4e SHA256 8fb701102d33af3a4ba334d3c9daa81e2d63bfc723bc18dd82ff73c723abf9ec
-EBUILD turbojson-1.1.2.ebuild 880 RMD160 76c406460b8d2d93492a270f75cf5a5c675d10ba SHA1 d9d4e25adfbf9e721e25b2ad0d0abadb7d640828 SHA256 d9066a2f055b6aa423350542d13b615afdf2f5a76a1380c35d7a7eba50354b3d
+DIST TurboJson-1.1.4.tar.gz 8500 RMD160 90daa752665b8f8bf323a9215624cda98a930e3d SHA1 1949e240e0a7ca4da96b4bf866de02ecdc7473db SHA256 3b6128b7266eddb8450abb6a974c8291cc70ad37164a05fed62f0531678ade2b
 EBUILD turbojson-1.1.3.ebuild 883 RMD160 ddd5c82a0fa384125c1e0f660cd974b17e85337d SHA1 5d91f641e561fbf2719e6b01973c1d3171d3575c SHA256 d94ac34cc541de9d2410338e10cafa5f4798a7ea6d5236117f65312e322b5b60
-MISC ChangeLog 836 RMD160 72d2ae6ff027cd88c74de6d0ece736481de24706 SHA1 957ae46bca416848d9ac11b97db30e8ccec78337 SHA256 c3ae8bbc63fa60dddddeb0fdfb90969a6c95990d997975c415364f42a96228f2
+EBUILD turbojson-1.1.4.ebuild 880 RMD160 6934e9ad007f0d553040d45e30e779d5a6c78a32 SHA1 84bf643919532c93e4d2377576d22dbeb7cfacca SHA256 998077872c864a311534e54a06a0b16d9d6b8757f4049a6349d471995be5fab3
+MISC ChangeLog 983 RMD160 2bd2eac49dd46c7d65b5ff241adb97c1aea06bff SHA1 acd74dd6df4a33d877d2120e2b263b9af5c5f4f3 SHA256 9ad0e2108c108f9af2aacc971b3ab43c8a63609f04f5a4484349c1896e456364
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
