@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/turbojson
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/turbojson/ChangeLog,v 1.4 2009/01/08 23:37:59 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/turbojson/ChangeLog,v 1.5 2009/04/01 11:47:19 patrick Exp $
+
+*turbojson-1.1.4 (01 Apr 2009)
+
+  01 Apr 2009; Patrick Lauer <patrick@gentoo.org> +turbojson-1.1.4.ebuild:
+  Bump to 1.1.4, fixes part of #264484
 
   08 Jan 2009; Patrick Lauer <patrick@gentoo.org> -turbojson-1.0.ebuild,
   -turbojson-1.1.2.ebuild:
